<resources>
    <string name="action">Action</string>
    <string name="app_name">Landfill E-Forms</string>
    <string name="location_header">Landfill Locations</string>
    <string name="tests_header">Tests</string>
    <string name="user_hub_header">Home Page</string>
    <string name="home_notication_label">Notifications</string>
    <string name="home_location_label">Locations</string>
    <string name="user_username_label">User Name</string>
    <string name="user_password_label">Password </string>
    <string name="user_login_label">Login</string>
    <string name="incorrect_login_toast">Username/password combination is incorrect</string>
    <string name="logout_toast">You have successfully logged out.</string>
    <string name="blank_login_toast">Please enter username and password</string>
    <string name="instantaneous_list_grid_label">Grid Id: </string>
    <string name="integrated_list_grid_label">Grid Id: </string>
    <string name="instantaneous_list_start_date_label">Date: </string>
    <string name="integrated_list_start_date_label">Date: </string>
    <string name="instantaneous_list_start_time_label">Start Time</string>
    <string name="instantaneous_list_end_time_label">End Time</string>
    <string name="instantaneous_list_methane_level_label">CH4(ppm)</string>
    <string name="integrated_list_methane_level_label">CH4(ppm)</string>
    <string name="integrated_list_bag_number_label">Bag No.</string>
    <string name="new_probe_data">New Probe Data Entry</string>
    <string name="new_instantaneous_data">New Instantaneous Data Entry</string>
    <string name="new_integrated_data">New Integrated Data Entry</string>
    <string name="delete_instantaneous_data">Remove Instantaneous Data Entry</string>
    <string name="delete_integrated_data">Remove Integrated Data Entry</string>
    <string name="new_ime_data">New IME Data Entry</string>
    <string name="new_ise_data">New ISE Data Entry</string>
    <string name="delete_ime_data">Remove IME Data Entry</string>
    <string name="delete_ise_data">Remove ISE Data Entry</string>
    <string name="new_warm_spot_data">New WarmSpot Data Entry</string>
    <string name="delete_warm_spot_data">Remove WarmSpot Data Entry</string>
    <string name="delete_probe_data">Remove Probe Data Entry</string>
    <string name="location_label">Location:</string>
    <string name="probe_number_label">Probe:</string>
    <string name="water_pressure_label">Pressure "H2O:</string>
    <string name="methane_percentage_label">%Methane:</string>
    <string name="ime_label">IME #:</string>
    <string name="ise_label">ISE #:</string>
    <string name="grid_id_label">Grid ID: </string>
    <string name="grid_id_hint">Ex: LOP-1234?</string>
    <string name="methane_reading_label">CH4(ppm) Reading</string>
    <string name="methane_reading_hint">Values: 0\-1000?</string>
    <string name="time_reading_label">Time</string>
    <string name="date_picker_title">Date:</string>
    <string name="time_picker_title">Time:</string>
    <string name="inspector_title">Inspector: </string>
    <string name="export_instantaneous_label">Export Instantaneous Data</string>
    <string name="export_button_label">Export</string>
    <string name="export_successful_toast">Export Successful!</string>
    <string name="no_data">There is no data to be exported.</string>
    <string name="export_unsuccessful_toast">Export Unsuccessful..</string>
    <string name="import_successful_toast">Import Successful!</string>
    <string name="import_unsuccessful_toast">Import Unsuccessful..</string>
    <string name="instantaneous_form_header">Instantaneous Entries</string>
    <string name="instantaenous_data_header">Instantaneous Form</string>
    <string name="ime_form_header">IME Entries</string>
    <string name="ise_form_header">ISE Entries</string>
    <string name="ime_data_header">IME Form</string>
    <string name="ise_data_header">ISE Form</string>
    <string name="warm_spot_form_header">Warmspot Entries</string>
    <string name="warm_spot_data_header">Warmspot Form</string>
    <string name="json_export_header">Export</string>
    <string name="submit_button_label">Submit</string>
    <string name="coming_soon_toast">Coming soon!</string>
    <string name="to_be_determined_toast">To be determined</string>
    <string name="baro_reading_label">Barometric pressure</string>
    <string name="start_time_label">Start Time</string>
    <string name="end_time_label">End Time</string>
    <string name="instrument_label">Instrument Serial #:</string>
    <string name="description_label">Description:</string>
    <string name="remarks_label">Remarks:</string>
    <string name="estimated_size_label">Estimated Size</string>
    <string name="entry_deleted_toast">Entry deleted.</string>
    <string name="integrated_added_toast">The Integrated entry has been added to the list.</string>
    <string name="warmspot_added_toast">The Warmspot entry has been added to the list.</string>
    <string name="ime_added_toast">The IME entry has been added to the list. </string>
    <string name="ise_added_toast">The ISE entry has been added to the list. </string>
    <string name="instantaneous_added_toast">The Instantaneous entry has been added to the list. </string>
    <string name="probe_added_toast">The Probe entry has been added to the list. </string>
    <string name="edit_button_label">Edit</string>
    <string name="set_button_label">Set</string>
    <string name="updated_barometric_toast">Updated barometric pressure for current entries.</string>
    <string name="blank_barometric_toast">Barometric pressure field blank. Setting default value.</string>
    <string name="start_end_time_error_toast">Start time cannot be after the end time.</string>
    <string name="end_start_time_error_toast">End time cannot be before the start time.</string>
    <string name="improper_methane_ime_toast">An IME entry cannot have CH4 levels below 500</string>
    <string name="improper_methane_ise_toast">An ISE entry cannot have CH4 levels below 25</string>
    <string name="improper_methane_warmspot_toast">A warmspot entry must have CH4 levels between 200 &amp; 500</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="welcome_string">Welcome!</string>
    <string name="inspector_list_label">Inspectors: </string>
    <string name="probe_list_probe_number_label">Probe</string>
    <string name="probe_list_water_pressure_label">Pressure "H2O</string>
    <string name="probe_list_methane_percentage_label">%CH4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="improper_methane_percentage_toast">%CH4 must be between 0 and 100!</string>
    <string name="probe_entry_added_toast">Probe added!</string>
    <string name="probe_form_header">Probe Entries</string>
    <string name="probe_data_header">Probe Form</string>
    <string name="integrated_form_header">Integrated Entries</string>
    <string name="integrated_data_header">Integrated Form</string>
    <string name="sample_id_label">Sample ID:</string>
    <string name="bag_number_label">Bag #:</string>
    <string name="volume_reading_label">Volume:</string>
    <string name="same_grid_time_conflict_toast">This time duration conflicts w/ another entry from the same grid!</string>
    <string name="updated_instrument_ime_datas">Updated instrument serial #s for current entries.</string>
    <string name="new_instantaneous_cancelation_toast">New Instantaneous Entry discarded.</string>
    <string name="new_integrated_cancelation_toast">New Integrated Entry discarded.</string>
    <string name="new_ise_cancelation_toast">New ISE Entry discarded.</string>
    <string name="new_probe_cancelation_toast">New Probe Entry discarded.</string>
    <string name="new_warmspot_cancelation_toast">New Warmspot Entry discarded.</string>
    <string name="new_ime_cancelation_toast">New IME Entry discarded.</string>
    <string name="unsaved_changes_discarded_toast">Unsaved changes discarded.</string>
    <string name="option_repair_toast">This option currently has bugs. Please use the other one.</string>
    <string name="import_header">Import</string>
    <string name="ime_grids_label">Grids:</string>
    <string name="size_label">Size</string>
    <string name="size_input_label">Size:</string>
    <string name="description">Description:</string>
    <string name="bishops">Bishops</string>
    <string name="gaffey">Gaffey</string>
    <string name="lopez">Lopez</string>
    <string name="toyon">Toyon</string>
    <string name="sheldon">Sheldon</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_warm_spot_data_pager">WarmSpotDataPagerActivity</string>
    <string name="title_activity_warm_spot_form">WarmSpotFormActivity</string>
    <string name="current_time">Time:</string>
    <string name="current_date">Date:</string>
    <string name="equipment_type">Equipment Type:</string>
    <string name="equipment_serial_no">Serial No.:</string>
    <string name="methane_data_entry_label">Methane Reading Data Entry</string>
    <string name="warmspot_label">Warmspot</string>
    <string name="equipment_type_label">Equipment Type:</string>
    <string name="serial_no_label">Equipment SN:</string>
    <string name="start_time">Start Time: </string>
    <string name="filter_button_label">Filter</string>
    <string name="search_button_label">Search</string>
    <string name="ch4_list_item_label">CH4(ppm):</string>
    <string name="pressure_h20_label">Pressure H20:</string>
    <string name="ime_no_label">IME No.:</string>
    <string-array name="equipment_array">
        <item>400UH</item>
        <item>475-III</item>
        <item>6400</item>
        <item>DD20</item>
        <item>Eagle-401</item>
        <item>Eagle-438</item>
        <item>GEM-2000</item>
        <item>GEM-5000</item>
        <item>GX-94</item>
        <item>ISCO 150</item>
        <item>MP-10</item>
        <item>MP-15</item>
        <item>MP-20</item>
    </string-array>
    <string-array name="empty_array">

    </string-array>
    <string-array name="bishops_grid">
        <item>A1</item>
        <item>A2</item>
        <item>A3</item>
        <item>A4</item>
        <item>A5</item>
        <item>A6</item>
        <item>A7</item>
        <item>A8</item>
        <item>A9</item>
        <item>A10</item>
        <item>A11</item>
        <item>A12</item>
        <item>B1</item>
        <item>B2</item>
        <item>B3</item>
        <item>B4</item>
    </string-array>
    <string-array name="gaffey_grid">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
</resources>