<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/backgroundTheme">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
        >

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ime_label"
            android:textColor="@color/textLabelColor"
            />

        <EditText
            android:id="@+id/ime_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inspector_title"
            android:textColor="@color/textLabelColor"
            />

        <TextView
            android:id="@+id/inspector_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_label"
            android:textColor="@color/textLabelColor"
            />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grid_id_label"
            android:textColor="@color/textLabelColor"
            />

        <EditText
            android:id="@+id/grid_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            />


        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/methane_reading_label"
            android:textColor="@color/textLabelColor"
            />

        <EditText
            android:id="@+id/methane_reading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/methane_reading_hint"
            android:inputType="numberDecimal"
            />



        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_label"
            android:textColor="@color/textLabelColor"
            />

        <!--Set it so it's a box & has a white background-->
        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_reading_label"
            android:textColor="@color/textLabelColor"
            />
        <Button
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>
    </LinearLayout>
</ScrollView>
