<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout  android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.13"
            android:text="@string/instantaneous_list_grid_label"
            android:textStyle="bold"
            android:textColor="@color/textLabelColor" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instantaneous_list_methane_level_label"
            android:textStyle="bold"
            android:textColor="@color/textLabelColor"
            android:layout_weight="0.04" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/instantaneous_list_start_date_label"
            android:textStyle="bold"
            android:textColor="@color/textLabelColor" />

        <TextView
            android:text="@string/size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_weight="0.15" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="Action"
            android:textStyle="bold"
            android:textColor="@color/textLabelColor" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
    android:id="@+id/warmspot_data_recycler_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>

</LinearLayout>