<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
            >

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inspector_title"
                />

            <TextView
                android:id="@+id/inspector_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_label"
                />

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grid_id_label"
                />

            <EditText
                android:id="@+id/grid_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methane_reading_label"
                />

            <EditText
                android:id="@+id/methane_reading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/methane_reading_hint"
                android:inputType="numberDecimal"
                />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_reading_label"
                />

            <Button
                android:id="@+id/start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        style="?android:listSeparatorTextViewStyle"
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/start_time_label"
                        />
                    <Button
                        android:id="@+id/start_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        style="?android:listSeparatorTextViewStyle"
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/end_time_label"
                        />
                    <Button
                        android:id="@+id/end_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instrument_label"
                />

            <EditText
                android:id="@+id/instrument_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ime_label"
                />


            <EditText
                android:id="@+id/ime_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />


            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
        </LinearLayout>
    </ScrollView>
